# Bootcamp_AI_Engineer_Codigofacilito

./: .gitignore
ai-engineer-bootcamp/: .env.example  main.py  pyproject.toml  requirements.txt
ai-engineer-bootcamp/core/: config.py  llm_client.py  logger.py  tokenlab.py
ai-engineer-bootcamp/scripts/: practice_tokenlab.py  streamlit_tokenlab.py
ai-engineer-bootcamp/structured_outputs/: 01_pydantic_basico.py  02_modelos_anidados.py  03_json_mode.py  04_structured_outputs.py  05_function_calling_definicion.py  06_function_calling_completo.py  07_pydantic_json_schema.py  08_practica_paso1_contrato.py  09_practica_paso2_extraccion.py  10_practica_paso3_produccion.py  11_practica_integrada.py  Tarea.md  actividad_extractor_recetas.py
slides/Clase-02/: Clase2_Tokens_Contexto_Costo_Latencia.pptx
