[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineer-bootcamp"
version = "0.1.0"
description = "Base project for Gemini API integration"
requires-python = ">=3.10"
dependencies = [
  "google-genai",
  "groq",
  "matplotlib",
  "python-dotenv",
  "rich",
  "streamlit",
]

[project.scripts]
ai-engineer-bootcamp = "main:main"
